// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Motif test suite should generate createMotif based on chord 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 64,
    "next": 480,
    "note": "E3",
    "time": 0,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 68,
    "next": 160,
    "note": "Ab3",
    "time": 480,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "Ab3",
    "time": 640,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 68,
    "next": 120,
    "note": "Ab3",
    "time": 880,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 64,
    "next": 320,
    "note": "E3",
    "time": 1000,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 240,
    "note": "E3",
    "time": 1320,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 61,
    "next": 360,
    "note": "Db3",
    "time": 1560,
  },
]
`;

exports[`A Motif test suite should generate createMotif based on chord 2`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 64,
    "next": 480,
    "note": "E3",
    "time": 0,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 240,
    "note": "E3",
    "time": 480,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 240,
    "note": "E3",
    "time": 720,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 480,
    "note": "Ab3",
    "time": 960,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 64,
    "next": 160,
    "note": "E3",
    "time": 1440,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 64,
    "next": 480,
    "note": "E3",
    "time": 1600,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 61,
    "next": 320,
    "note": "Db3",
    "time": 2080,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "Ab3",
    "time": 2400,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 480,
    "note": "Ab3",
    "time": 2640,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 240,
    "note": "E3",
    "time": 3120,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "Ab3",
    "time": 3360,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 68,
    "next": 120,
    "note": "Ab3",
    "time": 3600,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 68,
    "next": 120,
    "note": "Ab3",
    "time": 3720,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 73,
    "next": 480,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 76,
    "next": 160,
    "note": "E4",
    "time": 480,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 78,
    "next": 240,
    "note": "F#4",
    "time": 640,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 76,
    "next": 120,
    "note": "E4",
    "time": 880,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 74,
    "next": 320,
    "note": "D4",
    "time": 1000,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 240,
    "note": "C#4",
    "time": 1320,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 69,
    "next": 360,
    "note": "A3",
    "time": 1560,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 2`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 73,
    "next": 480,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 74,
    "next": 240,
    "note": "D4",
    "time": 480,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 71,
    "next": 240,
    "note": "B3",
    "time": 720,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 76,
    "next": 480,
    "note": "E4",
    "time": 960,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 73,
    "next": 160,
    "note": "C#4",
    "time": 1440,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 71,
    "next": 480,
    "note": "B3",
    "time": 1600,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 71,
    "next": 320,
    "note": "B3",
    "time": 2080,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 76,
    "next": 240,
    "note": "E4",
    "time": 2400,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 76,
    "next": 480,
    "note": "E4",
    "time": 2640,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 74,
    "next": 240,
    "note": "D4",
    "time": 3120,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 76,
    "next": 240,
    "note": "E4",
    "time": 3360,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 76,
    "next": 120,
    "note": "E4",
    "time": 3600,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 78,
    "next": 120,
    "note": "F#4",
    "time": 3720,
  },
]
`;

exports[`A Motif test suite should generate motif with rests 1`] = `
Array [
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 74,
    "next": 120,
    "note": "D4",
    "time": 0,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 76,
    "next": 120,
    "note": "E4",
    "time": 120,
  },
  Object {
    "dur": 200,
    "isRest": true,
    "midi": -1,
    "next": 200,
    "note": "",
    "time": 240,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 71,
    "next": 120,
    "note": "B3",
    "time": 440,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 120,
    "note": "",
    "time": 560,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 76,
    "next": 120,
    "note": "E4",
    "time": 680,
  },
  Object {
    "dur": 600,
    "isRest": true,
    "midi": -1,
    "next": 600,
    "note": "",
    "time": 800,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 74,
    "next": 120,
    "note": "D4",
    "time": 1400,
  },
  Object {
    "dur": 240,
    "isRest": true,
    "midi": -1,
    "next": 240,
    "note": "",
    "time": 1520,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 76,
    "next": 160,
    "note": "E4",
    "time": 1760,
  },
]
`;

exports[`A Motif test suite should return pattern with time = start time 1`] = `
Array [
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "Ab3",
    "time": 0,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 64,
    "next": 120,
    "note": "E3",
    "time": 240,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 68,
    "next": 120,
    "note": "Ab3",
    "time": 360,
  },
]
`;

exports[`A Motif test suite should return pattern with time = start time 2`] = `
Array [
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 61,
    "next": 120,
    "note": "Db3",
    "time": 480,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 64,
    "next": 320,
    "note": "E3",
    "time": 600,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 68,
    "next": 160,
    "note": "Ab3",
    "time": 920,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 64,
    "next": 360,
    "note": "E3",
    "time": 1080,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 68,
    "next": 160,
    "note": "Ab3",
    "time": 1440,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 64,
    "next": 320,
    "note": "E3",
    "time": 1600,
  },
]
`;
